chore: add app logo

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -21,7 +21,7 @@
 <body class="bg-zinc-100 dark:bg-zinc-900 dark:text-white overflow-x-hidden">
   <header class="bg-sky-200 dark:bg-sky-600">
     <nav class="flex justify-between px-10 h-24 max-w-7xl mx-auto items-center dark:text-white">
-      <img src="../assets/img/money-svgrepo-com.svg" class="h-12 rounded-full" alt="" id="logo" />
+      <img src="../assets/img/logo.jpg" class="h-20 rounded-full" alt="" id="logo" />
 
       <img class="block lg:hidden" src="../assets/img/menu_white_36dp.svg" id="menu-trigger">
       <ul class="hidden lg:flex gap-5">
